packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__active_filter.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
" │                                                                                                                      "
">│⠋    app1:test                                                                                          ...       <1ms"
" └                                                                                                                      "
"  ·    app1:build                                                                                         ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"  Filter: app1                                                                                                          "
"  -> 1 tasks filtered out. Press / to persist, <esc> to clear                                                           "
