packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__all_tasks_in_progress.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Test Tasks...                                                                            Cache   Duration"
" │                                                                                                                      "
">│⠋    app1:build                                                                                         ...       <1ms"
" │⠋    app1:test                                                                                          ...       <1ms"
" │⠋    app2:lint                                                                                          ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
