packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__batch_completion_after_ungrouping.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                        Cache   Duration"
"                                                                                                                        "
"  ✔    lib:build                                                                                       Remote       <1ms"
"> ✔    app:build                                                                                        Local       <1ms"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
