packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__batch_identity_batch_context.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 4313
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Batch Display Test...                                                                    Cache   Duration"
" │                                                                                                                      "
" │⠋    standalone:test                                                                                    ...       <1ms"
" │⠋ ▼  batch1 (2)                                                                                                       "
">│⠋      app:build                                                                                        ...       <1ms"
" │⠋      lib:build                                                                                        ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
