packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__batch_identity_standalone_context.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"       Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
">│⠋    app:build                                                                                          ...       <1ms"
" │⠋    lib:build                                                                                          ...       <1ms"
" │⠋    standalone:test                                                                                    ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
