packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__batch_lifecycle_collapsed_with_selection.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                        Cache   Duration"
" │                                                                                                                      "
" │⠋    standalone:test                                                                                    ...       <1ms"
">│⠋ ▶  batch1 (2)                                                                                                       "
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
