packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__batch_lifecycle_expanded_with_selection.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 4577
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Running Batch Display Test...                                                                    Cache   Duration"
" │                                                                                                                      "
" │⠋    standalone:test                                                                                    ...       <1ms"
" │⠋ ▼  batch1 (2)                                                                                                       "
" │⠋      app:build                                                                                        ...       <1ms"
">│⠋      lib:build                                                                                        ...       <1ms"
" └                                                                                                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
