packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__cache_column_spacing_with_long_truncated_task_name.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
assertion_line: 4082
expression: terminal.backend()
---
"                                                                                          "
" NX    Completed Test Tasks                                               Cache   Duration"
"                                                                                          "
"> ✔    this-is-a-very-long-task-name-that-will-definitely-be-truncated-w  Match        ..."
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
"                                                                                          "
